[package]
name = "cloudburst"
version = "0.0.4"
license = "MIT OR Apache-2.0"
authors = ["Bryant Luk <code@bryantluk.com>"]
edition = "2021"
description = "A library to help with the implementation of torrent based protocols and algorithms."
keywords = ["bittorrent", "torrent", "protocol", "p2p", "distributed"]
categories = ["network-programming"]
repository = "https://github.com/bluk/cloudburst"
documentation = "https://docs.rs/cloudburst/"
readme = "README.md"
include = [
  "src/**/*.rs",
  "Cargo.toml",
  "README.md",
  "LICENSE-APACHE",
  "LICENSE-MIT",
]
rust-version = "1.65.0"

[features]
default = ["std"]

std = ["bt_bencode/std", "gen_value/std", "serde/std", "serde_bytes/std", "bytes/std", "bitvec/std", "bitvec/atomic", "rand/std", "rand/std_rng" ]

alloc = ["bt_bencode/alloc", "gen_value/alloc", "serde/alloc", "serde_bytes/alloc", "bitvec/alloc", "bitvec/atomic", "rand/alloc" ]

[dependencies]
bitvec = { version = "1.0", default-features = false }
bt_bencode = { version = "0.7", default-features = false }
bytes = { version = "1.1", default-features = false }
crc32c = "0.6"
gen_value = { version = "0.6", default-features = false }
rand = { version = "0.8", default-features = false }
serde = { version = "1.0", default-features = false }
serde_bytes = { version = "0.11", default-features = false }
serde_derive = { version = "1.0" }
sha-1 = { version = "0.10", default-features = false }
thiserror = "1.0"

[dev-dependencies]
hex-literal = "0.4.1"
proptest = "1.3.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
